--- a/UOC/PAC1/PAC1.project
+++ b/UOC/PAC1/PAC1.project
@@ -91,6 +91,6 @@
     </Configuration>
   </Settings>
   <VirtualDirectory Name="src">
-    <File Name="main.c"/>
+    <File Name="checkMean.c"/>
   </VirtualDirectory>
 </CodeLite_Project>
