pointers attributes replaced by -> and testing implemented

--- a/UOC/Programming1/PAC3/UOCLibrary/UOCLibrary.project
+++ b/UOC/Programming1/PAC3/UOCLibrary/UOCLibrary.project
@@ -19,9 +19,11 @@
   <VirtualDirectory Name="src">
     <File Name="src/main.c"/>
     <File Name="src/ex1.c"/>
+    <File Name="src/test.c"/>
   </VirtualDirectory>
   <VirtualDirectory Name="include">
     <File Name="include/ex1.h"/>
+    <File Name="include/test.h"/>
   </VirtualDirectory>
   <Settings Type="Executable">
     <GlobalSettings>
