--- a/UOC/Programming1/PAC3.2/UOCLibrary/Makefile
+++ b/UOC/Programming1/PAC3.2/UOCLibrary/Makefile
@@ -1,8 +1,8 @@
 .PHONY: clean All
 
 All:
-	@echo "----------Building project:[ UOCLibrary - Debug ]----------"
+	@echo "----------Building project:[ UOCLibrary - Release ]----------"
 	@"$(MAKE)" -f  "UOCLibrary.mk"
 clean:
-	@echo "----------Cleaning project:[ UOCLibrary - Debug ]----------"
+	@echo "----------Cleaning project:[ UOCLibrary - Release ]----------"
 	@"$(MAKE)" -f  "UOCLibrary.mk" clean
